--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "i18next-browser-languagedetector": "^8.2.0",
