--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "i18next-localstorage-backend": "^4.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "postcss": "^8.5.6",
